2002-01-02  Glynn Foster  <glynn.foster@sun.com>

	* panel-gconf.c, panel-widget.c, session.c, session.h: 
	Implemented new session_remove_panel_config () function to clean
	up the gconf database after we start removing panels. Doesn't work
	at all yet, but it doesn't make things crash which is a bonus.

2002-01-01  Glynn Foster  <glynn.foster@sun.com>
	 
	* config/Makefile.am, config/panel.config,
	* config/panel.global: Removed, old crusty config stuff
	that we don't need anymore. WARNING! keep the launcher
	config still, I want to look at that.
	
	* main.c, menu.c, session.c, session.h: Removed some more crufty 
	code that we don't need anymore. Mark tearoff loading FIXME'd.

2001-12-31  Glynn Foster  <glynn.foster@sun.com>

	* panel-gconf.c, panel-gconf.h, session.c: 

	All because the lady likes new API. Implemented / copied code for
	a recursive unset of a gconf directory. Nothing uses it yet, but 
	it soon will.
	
2001-12-30  Glynn Foster  <glynn.foster@sun.com>

	* panel-per-panel-config.schemas: Complete the schema for 
	large size. Just waiting for some usability input now ;)

2001-12-30  Glynn Foster  <glynn.foster@sun.com>

	* panel-gconf.c, session.c: 

	1:30am + 6 hours of tv = mushed (brain). Think I've got all
	the panels saving and loading properly now. They even do 
	session management, but I'm too scared to run gnome-session-2 to
	check if that actually works.

Fri Dec 28 03:00:03 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c: correctly handle icon changing

	* menu.c: Fix some ugliness around the applets menu, still
	  much ugliness prevails

	* session.c: fix a few leaks.  When we find no panels install
	  a menu panel and tell the user.  Else the user would have no
	  interface to fix his configuration.

Wed Dec 26 17:45:49 2001  George Lebl <jirka@5z.com>

	* gnome-panel-screenshot.c, menu.c, panel.c, panel-util.c,
	  panel-widget.c:  I'm a dubmass!  GdkCursor is NOT a GObject

	* foobar-widget.c:  a bit of cleanup
